[tool.poetry]
name = "kaleidoscope"
version = "0.1.0"
description = "A static photo gallery generator"
authors = ["Sergej Chodarev <sergejx@sergejx.net>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sergejx/kaleidoscope"

include = [
    "kaleidoscope/assets/*",
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
jinja2 = "^2.11.2"
imagesize = "^1.2.0"
tqdm = "^4.48.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
mypy = "^0.782"

[tool.poetry.scripts]
kaleidoscope = 'kaleidoscope.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
